test_files/netlist_footer_cmp/valid/valid_case_03_b.net
V1 0 VEE 12
R1 E 0 4.7k
R2 E B 100k
R3 B VEE 22k
R4 C VEE 2k
Q1 C B E 0 PNP
.ac dec 20 1 1Meg
* comment ignored
.include filters.lib
.backanno
.end
